Reorganize port out interfaces by domain